# rusty_provider

./: .dockerignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  RELEASE_NOTES.md  SECURITY.md  config.example.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: audit.yml  ci.yml
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  provider.rs  rate_limit.rs  types.rs
crates/providers/: Cargo.toml
crates/providers/src/: anthropic.rs  gemini.rs  http.rs  lib.rs  openai_compatible.rs  util.rs
crates/providers/tests/: anthropic.rs  gemini.rs  openai_compatible.rs
crates/providers/tests/common/: mod.rs
crates/router/: Cargo.toml
crates/router/src/: auto_routing.rs  cache.rs  client_budget.rs  config.rs  error.rs  guardrails.rs  lib.rs  metrics.rs  moderation.rs  persistence.rs  presets.rs  web_search.rs  webhook.rs
crates/server/: Cargo.toml
crates/server/src/: budget.rs  errors.rs  lib.rs  main.rs  routes.rs  state.rs
crates/server/tests/: http_endpoints.rs
