[package]
name = "rp-router"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
rp-core.workspace = true
rp-providers.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
futures.workspace = true
